--- a/app/images/images.html
+++ b/app/images/images.html
@@ -18,24 +18,21 @@
     </div>
     <table class="table table-condensed table-hover table-striped table-bordered">
         <thead>
-        <tr class="success">
+        <tr class="success vcenter form-group">
             <td colspan="6">
-                <div class="col-md-4 vcenter">
-                    <button type="button" ng-click="refreshImages()" class="btn btn-primary btn-sm"><span
-                            class="glyphicon glyphicon-refresh"></span><strong> Refresh</strong>
-                    </button>
-                    <button type="button" class="btn btn-primary btn-sm" ng-click="switchShowAllFlag()">
-                        <span ng-class="{'glyphicon glyphicon-unchecked':!showAllImagesFlag, 'glyphicon glyphicon-check':showAllImagesFlag}"></span><strong>
-                        All</strong>
-                    </button>
-                    <button type="button" class="btn btn-primary btn-sm" ng-click="switchShowUntaggedFlag()"><span
-                            ng-class="{'glyphicon glyphicon-unchecked':!showUntaggedImagesFlag, 'glyphicon glyphicon-check':showUntaggedImagesFlag}"></span><strong>
-                        Untagged</strong>
-                    </button>
-                </div>
-                <div class="col-md-6 vcenter">
-                    <strong>Items listed: <span class="badge">{{images.length}}</span></strong>
-                </div>
+                <button type="button" ng-click="refreshImages()" class="btn btn-primary btn-sm"><span
+                        class="glyphicon glyphicon-refresh"></span><strong> Refresh</strong>
+                </button>
+                <button type="button" class="btn btn-primary btn-sm" ng-click="switchShowAllFlag()">
+                    <span ng-class="{'glyphicon glyphicon-unchecked':!showAllImagesFlag, 'glyphicon glyphicon-check':showAllImagesFlag}"></span><strong>
+                    All</strong>
+                </button>
+                <button type="button" class="btn btn-primary btn-sm" ng-click="switchShowUntaggedFlag()"><span
+                        ng-class="{'glyphicon glyphicon-unchecked':!showUntaggedImagesFlag, 'glyphicon glyphicon-check':showUntaggedImagesFlag}"></span><strong>
+                    Untagged</strong>
+                </button>
+                <label>Filter: <input ng-model="search.$"></label>
+                <strong>Items listed: <span class="badge">{{images.length}}</span></strong>
             </td>
         </tr>
         </thead>
@@ -78,7 +75,7 @@
                     </span>
             </td>
         </tr>
-        <tr ng-repeat="image in images | orderBy:sort.column:sort.desc">
+        <tr ng-repeat="image in images | filter:search | orderBy:sort.column:sort.desc">
             <!--<tr ng-repeat="image in images | orderBy:RepoTags[0]">-->
             <td class="text-center">
                  <span ng-class="{'glyphicon glyphicon-check':image.selected, 'glyphicon glyphicon-unchecked':!image.selected}"
