--- a/app/containerDetails/containerDetails.html
+++ b/app/containerDetails/containerDetails.html
@@ -1,4 +1,8 @@
 <div class="col-md-12 ">
+    <div class="alert alert-danger" role="alert" ng-show="containerDetails.HostConfig.Privileged==true">
+        <h3 class="panel-title"><span class="fa fa-exclamation-triangle"></span>
+            This is a privileged container</h3>
+    </div>
     <div class="row">
         <div class="col-md-6">
             <h3>Container: <strong>{{containerDetails.Name.substring(1).toUpperCase()}}</strong>
@@ -124,8 +128,8 @@
         <div class="col-md-3">{{containerDetails.Config.WorkingDir}}</div>
         <div class="col-md-1"></div>
         <div class="col-md-3"></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-3"></div>
+        <div class="col-md-1 text-right"><strong>Privileged:</strong></div>
+        <div class="col-md-3">{{containerDetails.HostConfig.Privileged}}</div>
     </div>
     <div class="row">
         <div class="col-md-1 text-right"><strong>Command</strong></div>
@@ -197,7 +201,8 @@
                     </h3>
                 </div>
                 <div class="panel-body">
-                    <table class="table table-condensed table-hover table-striped" ng-show="!isEmpty(containerDetails.Volumes)">
+                    <table class="table table-condensed table-hover table-striped"
+                           ng-show="!isEmpty(containerDetails.Volumes)">
                         <thead>
                         <tr>
                             <th>Host</th>
