Making ready as chrome app

--- a/app/images/images.html
+++ b/app/images/images.html
@@ -84,7 +84,7 @@
                 </span>
             </td>
             <td class="text-center">
-                <button class="btn btn-info btn-block btn-sm" ng-click="goImageDetails('image.Id')">
+                <button class="btn btn-info btn-block btn-sm" ng-click="goImageDetails(image.Id)">
                     <strong>{{image.Id | limitTo:12}}</strong>
                 </button>
             </td>
