--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="dockermon">
+<html lang="en" ng-app="dockermon" ng-csp="">
 <head>
     <meta charset="UTF-8">
     <title>DockerMon</title>
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/libs/json-formatter/dist/json-formatter.min.css">
     <link rel="stylesheet" href="assets/libs/xterm.js/src/xterm.css">
     <link rel='stylesheet' href='assets/css/custom.css'>
+    <link rel='stylesheet' href='assets/css/angular-csp.css'>
     <link rel='stylesheet' href='assets/libs/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css'>
 </head>
 <body>
