Renaming app to dockery

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="dockermon" ng-csp="">
+<html lang="en" ng-app="dockery" ng-csp="">
 <head>
     <meta charset="UTF-8">
-    <title>DockerMon</title>
+    <title>Dockery</title>
     <link rel="shortcut icon" href="assets/img/docker_icon.jpg">
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
     <link rel='stylesheet' href='assets/libs/font-awesome/css/font-awesome.min.css'>
@@ -33,9 +33,9 @@
                     <li><a class="active" href="#/containers"><span class="fa fa-cubes"></span> Containers</a></li>
                     <li><a href="#/images"><span class="fa fa-database"></span> Images</a></li>
                 </ul>
-                <ul class="nav navbar-nav pull-right">
-                    <li><a href="#">Help</a></li>
-                </ul>
+                <!--<ul class="nav navbar-nav pull-right">-->
+                    <!--<li><a href="#">Help</a></li>-->
+                <!--</ul>-->
             </div>
         </nav>
     </div>
