--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="dockery" ng-csp="">
 <head>
     <meta charset="UTF-8">
-    <title>Dockery</title>
+    <title>{{$root.appName}}</title>
     <link rel="shortcut icon" href="assets/img/docker_icon.jpg">
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
     <link rel='stylesheet' href='assets/libs/font-awesome/css/font-awesome.min.css'>
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/hostDetails"><span class="fa fa-desktop"></span> Dockery</a>
+                <a class="navbar-brand" href="#/hostDetails"><span class="fa fa-desktop"></span> {{$root.appName}}</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
